# daisy-financial-research

./: .gitignore  .last_update  CLAUDE.md  README.md  README_CN.md  SKILL.md  pyproject.toml  requirements-test.txt
.github/workflows/: tests.yml
agents/: openai.yaml
docs/superpowers/plans/: 2026-05-02-multi-platform-adaptation.md
docs/superpowers/specs/: 2026-05-02-multi-platform-adaptation-design.md
references/: cn-market-analyst-prompts.md  data-source-routing.md  debate-prompts.md  decision-schema.md  dexter-analysis.md  hk-ticker-name.json  hsbc-hk-bank-research-test-20260429.md  reflection-prompt.md  risk-debate-prompts.md  stock-screening-presets.md  technical-indicator-cheatsheet.md
scripts/: _envelope.py  akshare_hk_valuation.py  debate_runner.py  dexter_memory_log.py  dexter_scratchpad.py  financial_report.py  hk_connect_universe.py  screen_a_share.py  screen_hk_connect.py  segments.py  technical_indicators.py
templates/: screening_report.md
tests/: README.md  conftest.py  test_envelope_contract.py  test_memory_log.py
