# Runtime manifest for daisy-financial-research.
#
# This project is a multi-platform agent SKILL — the user-facing artifact is
# scripts/, references/, and SKILL.md, not a Python package. The pyproject
# exists so contributors can reproduce the runtime environment with uv:
#
#   uv sync                    # install runtime deps (tushare/pandas/numpy)
#   uv sync --extra akshare    # also install AKShare HK fallback
#   uv sync --extra us         # also install yfinance for US tickers
#   uv sync --extra ta         # also install stockstats for technical_indicators.py
#   uv sync --all-extras       # everything
[project]
name = "daisy-financial-research"
version = "2.7.0"
description = "Multi-platform agent skill for stock / company / sector research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agents365-ai", url = "https://space.bilibili.com/1107534197" }]

# Runtime requirements that every script in scripts/ assumes are present.
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "tushare>=1.4",
    "requests>=2.31",
]

[project.optional-dependencies]
# AKShare HK valuation/fundamentals fallback (akshare_hk_valuation.py)
# and the HSI benchmark fallback for dexter_memory_log auto-resolve.
akshare = ["akshare>=1.18"]
# US tickers in dexter_memory_log compute-returns / auto-resolve.
us = ["yfinance>=0.2"]
# Technical indicators (technical_indicators.py); pandas-only computation.
ta = ["stockstats>=0.6"]

[project.urls]
Homepage = "https://github.com/Agents365-ai/daisy-financial-research"
Repository = "https://github.com/Agents365-ai/daisy-financial-research"
